Fixed spacing issue with chart on view driver page, fixed issue with favourites

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -443,7 +443,6 @@ table.striped>tbody>tr:nth-child(odd) {
 .chart-row {
   display: flex;
   justify-content: center;
-  margin-top: 3%;
 }
 
 iframe {
